RESOLVED FIXED266333
REGRESSION(271921@main): [GStreamer] ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key)
https://bugs.webkit.org/show_bug.cgi?id=266333
Summary REGRESSION(271921@main): [GStreamer] ASSERTION FAILED: !HashTranslator::equal...
Vitaly Dyackhov
Reported 2023-12-13 03:45:35 PST
Starting from 271922@main the tests listed below have been hitting the assertion: fast/canvas/webgl/texImage2D-mse-flipY-false.html fast/canvas/webgl/texImage2D-mse-flipY-true.html fast/canvas/webgl/texImage2D-mse-in-dom-flipY-false.html fast/canvas/webgl/texImage2D-mse-in-dom-flipY-true.html http/tests/media/media-source/media-source-video-fit-fill.html http/tests/media/media-source/mediasource-play-then-seek-back-with-remote-control.html http/tests/media/media-source/mediasource-rvfc.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-destroy-persistent-license.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-retrieve-persistent-license.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-clear-encrypted.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-encrypted-clear-sources.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-encrypted-clear.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-events.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-multikey.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-multisession.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-setMediaKeys-after-src.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-setMediaKeys-after-update.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-setMediaKeys-onencrypted.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-temporary-waitingforkey.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-setmediakeys-multiple-times-with-the-same-mediakeys.https.html imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-waiting-for-a-key.https.html imported/w3c/web-platform-tests/media-source/mediasource-activesourcebuffers.html imported/w3c/web-platform-tests/media-source/mediasource-append-buffer.html imported/w3c/web-platform-tests/media-source/mediasource-appendbuffer-quota-exceeded.html imported/w3c/web-platform-tests/media-source/mediasource-appendwindow.html imported/w3c/web-platform-tests/media-source/mediasource-avtracks.html imported/w3c/web-platform-tests/media-source/mediasource-buffered-seek.html imported/w3c/web-platform-tests/media-source/mediasource-buffered.html imported/w3c/web-platform-tests/media-source/mediasource-changetype-play-without-codecs-parameter.html imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-a-bitrate.html imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-av-audio-bitrate.html imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-av-framesize.html imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-av-video-bitrate.html Stack trace: #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007fd586e529d5 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007fd58d1e242c in WTF::HashTable<unsigned long, WTF::KeyValuePair<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > > >, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> >, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long> >::checkKey<WTF::HashMapTranslator<WTF::HashMap<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> >, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::HashTableTraits>::KeyValuePairTraits, WTF::DefaultHash<unsigned long> >, unsigned long>(unsigned long const&) (this=0x7fbafe16eeb8, key=@0x7ffc3d2b6b10: 0) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/HashTable.h:648 #3 0x00007fd58d1e0ecf in WTF::HashTable<unsigned long, WTF::KeyValuePair<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > > >, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> >, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long> >::add<WTF::HashMapTranslator<WTF::HashMap<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> >, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::HashTableTraits>::KeyValuePairTraits, WTF::DefaultHash<unsigned long> >, unsigned long, WTF::Ref<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer> > >(unsigned long&&, WTF::Ref<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer> >&&) (this=0x7fbafe16eeb8, key=@0x7ffc3d2b6b10: 0, extra=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/HashTable.h:869 #4 0x00007fd58d1df3f8 in WTF::HashMap<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> >, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::HashTableTraits>::inlineAdd<unsigned long, WTF::Ref<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer> > >(unsigned long&&, WTF::Ref<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer> >&&) (this=0x7fbafe16eeb8, key=@0x7ffc3d2b6b10: 0, value=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/HashMap.h:404 #5 0x00007fd58d1dce0d in WTF::HashMap<unsigned long, WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> >, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer>, WTF::DefaultRefDerefTraits<WebCore::MediaSourceTrackGStreamer> > >, WTF::HashTableTraits>::add<WTF::Ref<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer> > >(unsigned long&&, WTF::Ref<WebCore::MediaSourceTrackGStreamer, WTF::RawPtrTraits<WebCore::MediaSourceTrackGStreamer> >&&) (this=0x7fbafe16eeb8, key=@0x7ffc3d2b6b10: 0, mapped=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/HashMap.h:446 #6 0x00007fd58d1d71cf in WebCore::SourceBufferPrivateGStreamer::precheckInitializationSegment(WebCore::SourceBufferPrivateClient::InitializationSegment const&) (this=0x7fbafe16ed80, segment=...) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:219 #7 0x00007fd58cfc8aec in operator()<std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError> >(std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError>) (__closure=0x7fbaf89c5208, result=...) at /app/webkit/Source/WebCore/platform/graphics/SourceBufferPrivate.cpp:544 #8 0x00007fd58cfd60d0 in std::__invoke_impl<WTF::Ref<WTF::NativePromise<void, WebCore::PlatformMediaError> >, WebCore::SourceBufferPrivate::didReceiveInitializationSegment(InitializationSegment&&)::<lambda(auto:90)>, std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError> >(std::__invoke_other, struct {...} &&) (__f=...) at /usr/include/c++/13.2.0/bits/invoke.h:61 #9 0x00007fd58cfd28a0 in std::__invoke<WebCore::SourceBufferPrivate::didReceiveInitializationSegment(InitializationSegment&&)::<lambda(auto:90)>, std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError> >(struct {...} &&) (__fn=...) at /usr/include/c++/13.2.0/bits/invoke.h:97 #10 0x00007fd58cfcfa60 in std::invoke<WebCore::SourceBufferPrivate::didReceiveInitializationSegment(InitializationSegment&&)::<lambda(auto:90)>, std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError> >(struct {...} &&) (__fn=...) at /usr/include/c++/13.2.0/functional:114 #11 0x00007fd58cfc8c85 in WTF::NativePromise<void, WebCore::PlatformMediaError, 0>::invokeWithVoidOrWithArg<WebCore::SourceBufferPrivate::didReceiveInitializationSegment(InitializationSegment&&)::<lambda(auto:90)>, std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError> >(struct {...} &&, std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError> &&) (f=..., arg=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NativePromise.h:922 #12 0x00007fd58cfc8cf8 in operator()(WTF::NativePromise<void, WebCore::PlatformMediaError, 0>::ResultParam) (__closure=0x7fbaf89c5208, result=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NativePromise.h:954 #13 0x00007fd58cfdf902 in WTF::Detail::CallableWrapper<WTF::NativePromise<void, WebCore::PlatformMediaError>::whenSettled<WebCore::SourceBufferPrivate::didReceiveInitializationSegment(InitializationSegment&&)::<lambda(auto:90)> >(WTF::RefCountedSerialFunctionDispatcher&, WebCore::SourceBufferPrivate::didReceiveInitializationSegment(InitializationSegment&&)::<lambda(auto:90)>&&, const WTF::Logger::LogSiteIdentifier&)::<lambda(WTF::NativePromise<void, WebCore::PlatformMediaError>::ResultParam)>, WTF::Ref<WTF::NativePromise<void, WebCore::PlatformMediaError, 0>, WTF::RawPtrTraits<WTF::NativePromise<void, WebCore::PlatformMediaError, 0> > >, std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError>&&>::call(std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError> &&) (this=0x7fbaf89c5200, in#0=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:53 #14 0x00007fd58d00a509 in WTF::Function<WTF::Ref<WTF::NativePromise<void, WebCore::PlatformMediaError, 0u>, WTF::RawPtrTraits<WTF::NativePromise<void, WebCore::PlatformMediaError, 0u> > > (std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError>&&)>::operator()(std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError>&&) const (this=0x7fbaf8e93910, in#0=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #15 0x00007fd58d00910d in WTF::NativePromise<void, WebCore::PlatformMediaError, 0u>::ThenCallback<true, WTF::NativePromise<void, WebCore::PlatformMediaError, 0u> >::processResult(std::experimental::fundamentals_v3::expected<void, WebCore::PlatformMediaError>&) (this=0x7fbaf8e938d0, result=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NativePromise.h:751 #16 0x00007fd58aaa466d in WTF::NativePromise<void, WebCore::PlatformMediaError, 0u>::ThenCallbackBase::dispatch(WTF::NativePromise<void, WebCore::PlatformMediaError, 0u>&, WTF::Locker<WTF::Lock>&)::{lambda()#1}::operator()() (__closure=0x7fbaf8ea7bd8) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NativePromise.h:695 #17 0x00007fd58aab6c02 in WTF::Detail::CallableWrapper<WTF::NativePromise<void, WebCore::PlatformMediaError, 0u>::ThenCallbackBase::dispatch(WTF::NativePromise<void, WebCore::PlatformMediaError, 0u>&, WTF::Locker<WTF::Lock>&)::{lambda()#1}, void>::call() (this=0x7fbaf8ea7bd0) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:53 #18 0x00007fd57b15bcab in WTF::Function<void ()>::operator()() const (this=0x7ffc3d2b7020) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #19 0x00007fd57c80237f in WTF::RunLoop::performWork() (this=0x7fd5670180c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #20 0x00007fd57c8bd472 in operator()(gpointer) const (__closure=0x0, userData=0x7fd5670180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #21 0x00007fd57c8bd496 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #22 0x00007fd57c8bd405 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x564a6bec0ad0, callback=0x7fd57c8bd479 <_FUN(gpointer)>, userData=0x7fd5670180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #23 0x00007fd57c8bd453 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #24 0x00007fd57cef2d36 in g_main_dispatch (context=0x564a6be96d90) at ../glib/gmain.c:3460 #25 g_main_context_dispatch (context=0x564a6be96d90) at ../glib/gmain.c:4200 #26 0x00007fd57cf502b8 in g_main_context_iterate.isra.0 (context=0x564a6be96d90, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #27 0x00007fd57cef23ff in g_main_loop_run (loop=0x564a6bec0ab0) at ../glib/gmain.c:4479 #28 0x00007fd57c8bdac6 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #29 0x00007fd5889ddfef in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7ffc3d2b72f0, argc=4, argv=0x7ffc3d2b74b8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #30 0x00007fd5889dab70 in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk>(int, char**) (argc=4, argv=0x7ffc3d2b74b8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #31 0x00007fd5889d2976 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7ffc3d2b74b8) at /app/webkit/Source/WebKit/WebProcess/gtk/WebProcessMainGtk.cpp:90 #32 0x0000564a6afac969 in main(int, char**) (argc=4, argv=0x7ffc3d2b74b8) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31
Attachments
Vitaly Dyackhov
Comment 1 2023-12-13 04:48:38 PST
EWS
Comment 2 2023-12-13 04:53:02 PST
Test gardening commit 271977@main (614099ee0c66): <https://commits.webkit.org/271977@main> Reviewed commits have been landed. Closing PR #21728 and removing active labels.
Philippe Normand
Comment 3 2023-12-13 06:16:35 PST
EWS
Comment 4 2023-12-14 03:42:35 PST
Committed 272028@main (ad15255ae7ca): <https://commits.webkit.org/272028@main> Reviewed commits have been landed. Closing PR #21730 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2023-12-14 03:43:14 PST
Note You need to log in before you can comment on or make changes to this bug.